
 715.	[bug]		Resolving some A6 chains could cause an assertion
			failure in adb.c. [RT #738]

 714.	[bug]		Preserve interval timers across reloads unless changed.
			[RT# 729]

 713.	[func]		named-checkconf takes '-t directory' similar to named.
			[RT #726]

 712.	[bug]		Sending a large signed update message caused an
			assertion failure. [RT #718]

 711.	[bug]		The libisc and liblwres implementations of
			inet_ntop contained an off by one error.

 710.	[func]		The forwarders statement now takes an optional
			port. [RT #418]

 709.	[bug]		ANY or SIG queries for data with a TTL of 0
			would return SERVFAIL. [RT #620]

 708.	[bug]		When building with --with-openssl, the openssl headers
			included should not be used. [RT #702]

 707.	[func]		The "filename" argument to named-checkzone is no
			longer optional, to reduce confusion. [RT #612]

 706.	[bug]		Zones with an explicit "allow-update { none; };"
			were considered dynamic and therefore not reloaded
			on SIGHUP or "rndc reload".

 705.	[port]		Work out resource limit type for use where rlim_t is
			not available. [RT #695]

 704.	[port]		RLIMIT_NOFILE is not available on all platforms.
			[RT #695]

 703.	[port]		sys/select.h is needed on older platforms. [RT #695]

 702.	[func]		If the address 0.0.0.0 is seen in resolv.conf,
			use 127.0.0.1 instead. [RT #693]

 701.	[func]		Root hints are now fully optional.  Class IN
			views use compiled-in hints by default, as
			before.  Non-IN views with no root hints now
			provide authoritative service but not recursion.
			A warning is logged if a view has neither root
			hints nor authoritative data for the root. [RT #696]

 700.	[bug]		$GENERATE range check was wrong. [RT #688]

 699.	[bug]		The lexer mishandled empty quoted strings. [RT #694]

 698.	[bug]		Aborting nsupdate with ^C would lead to several
			race conditions.

 697.	[bug]		nsupdate was not compatible with the undocumented
			BIND 8 behavior of ignoring TTLs in "update delete"