@@ -15,7 +15,7 @@
  * WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: master.c,v 1.101 2001/01/22 03:34:25 marka Exp $ */
+/* $Id: master.c,v 1.102 2001/01/30 13:23:32 marka Exp $ */
 
 #include <config.h>
 
@@ -83,7 +83,7 @@
 typedef ISC_LIST(dns_rdatalist_t) rdatalist_head_t;
 
 /*
- * Master file loading state that persists across $INCLUDEs.
+ * Master file load state.
  */
 
 struct dns_loadctx {
@@ -813,6 +813,7 @@ load(dns_loadctx_t **ctxp) {
 				CTX_COPYVAR(ctx, *ctxp, result);
 				dns_loadctx_detach(&ctx);
 				ctx = *ctxp;
+				read_till_eol = ISC_TRUE;
 				continue;
 			}
 			done = ISC_TRUE;
@@ -923,7 +924,6 @@ load(dns_loadctx_t **ctxp) {
 				 * to domain name processing code and do
 				 * the actual inclusion later.
 				 */
-				read_till_eol = ISC_TRUE;
 				finish_include = ISC_TRUE;
 			} else if (strcasecmp(token.value.as_pointer,
 					      "$DATE") == 0) {
